utoipa-gen/tests/snapshots/response_derive_test__derive_enum_response.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 38
expression: v
---
{
  "content": {
    "application/json": {
      "schema": {
        "oneOf": [
          {
            "type": "object",
            "required": [
              "Value"
            ],
            "properties": {
              "Value": {
                "type": "string"
              }
            }
          },
          {
            "type": "string",
            "enum": [
              "Foobar"
            ]
          }
        ]
      }
    }
  }
}
