utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_enum_with_multiple_responses.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 336
expression: responses
---
{
  "200": {
    "content": {
      "application/json": {
        "schema": {
          "description": "Success response",
          "properties": {
            "value": {
              "type": "string"
            }
          },
          "required": [
            "value"
          ],
          "type": "object"
        }
      }
    },
    "description": "Success response"
  },
  "400": {
    "content": {
      "application/json": {
        "schema": {
          "$ref": "#/components/schemas/BadRequest"
        }
      }
    }
  },
  "404": {},
  "418": {
    "content": {
      "application/json": {
        "schema": {
          "properties": {
            "message": {
              "type": "string"
            }
          },
          "required": [
            "message"
          ],
          "type": "object"
        }
      }
    }
  },
  "500": {
    "$ref": "#/components/responses/Response"
  }
}
