utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_inline_named_struct_response.snap
---
source: utoipa-gen/tests/response_derive_test.rs
expression: responses
snapshot_kind: text
---
{
  "200": {
    "content": {
      "application/json": {
        "schema": {
          "description": "This is success response",
          "properties": {
            "value": {
              "type": "string"
            }
          },
          "required": [
            "value"
          ],
          "type": "object"
        }
      }
    },
    "description": "This is success response"
  }
}
