utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_unit_struct.snap
---
source: utoipa-gen/tests/response_derive_test.rs
expression: responses
snapshot_kind: text
---
{
  "404": {
    "description": "Not found response"
  }
}
