utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_unnamed_struct_ref_response.snap
---
source: utoipa-gen/tests/response_derive_test.rs
expression: responses
snapshot_kind: text
---
{
  "201": {
    "$ref": "#/components/responses/Foo"
  }
}
