utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_unnamed_struct_ref_schema.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 267
expression: responses
---
{
  "201": {
    "content": {
      "application/json": {
        "schema": {
          "$ref": "#/components/schemas/Foo"
        }
      }
    }
  }
}
