utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_unnamed_struct_to_response.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 299
expression: responses
---
{
  "201": {
    "content": {
      "application/json": {
        "schema": {
          "properties": {
            "bar": {
              "type": "string"
            }
          },
          "required": [
            "bar"
          ],
          "type": "object"
        }
      }
    }
  }
}
