utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_unnamed_struct_with_primitive_schema.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 251
expression: responses
---
{
  "201": {
    "content": {
      "text/plain": {
        "schema": {
          "type": "string"
        }
      }
    }
  }
}
