utoipa-gen/tests/snapshots/response_derive_test__derive_name_struct_response.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 14
expression: v
---
{
  "content": {
    "application/json": {
      "schema": {
        "type": "object",
        "required": [
          "name"
        ],
        "properties": {
          "name": {
            "type": "string"
          }
        }
      }
    }
  }
}
