utoipa-gen/tests/snapshots/response_derive_test__derive_response_multiple_examples.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 95
expression: v
---
{
  "content": {
    "application/json": {
      "schema": {
        "type": "object",
        "required": [
          "name"
        ],
        "properties": {
          "name": {
            "type": "string"
          }
        }
      },
      "examples": {
        "Person1": {
          "value": {
            "name": "name1"
          }
        },
        "Person2": {
          "value": {
            "name": "name2"
          }
        }
      }
    }
  }
}
