utoipa-gen/tests/snapshots/response_derive_test__derive_response_with_enum_contents.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 123
expression: v
---
{
  "content": {
    "application/json/1": {
      "schema": {
        "$ref": "#/components/schemas/Admin"
      },
      "examples": {
        "Person1": {
          "value": {
            "name": "name1"
          }
        },
        "Person2": {
          "value": {
            "name": "name2"
          }
        }
      }
    },
    "application/json/2": {
      "schema": {
        "$ref": "#/components/schemas/Moderator"
      },
      "example": {
        "name": "name3"
      }
    }
  }
}
